# d4ft4

./: Cargo.toml  README.md
.cargo/: config.toml
d4ft4/: Cargo.toml
d4ft4-gui/: elm.json  watch.sh
d4ft4-gui/public/: backend.js  backend_old.js  index.html  tauri.js
d4ft4-gui/src/: Common.elm  Components.elm  Destination.elm  FileTransfer.elm  Home.elm  Main.elm  Messaging.elm  Peer.elm  Receive.elm  Send.elm
d4ft4-gui/src-tauri/: Cargo.toml  notes.txt  tauri.conf.json
d4ft4-gui/src-tauri/java/: DialogCallback.java
d4ft4-gui/src-tauri/src/: android.rs  lib.rs  main.rs
d4ft4/src/: encoding.rs  error.rs  lib.rs  protocol.rs
d4ft4/src/connection/: mod.rs  receive.rs  send.rs
