[package]
name = "d4ft4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5", features = ["stream"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
hex = "0.4"
rand_chacha = "0.3"
scrypt = { version = "0.11", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.30.0", features = ["net", "io-util"] }
typenum = "1.16"
